AmpShare SF Codebase/force-app/main/default/objects/Org_Details__c/Org_Details__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Org Details</label>
</CustomObject>