AmpShare SF Codebase/force-app/main/default/objects/Org_Details__c/fields/Client_Secret_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret_Id__c</fullName>
    <label>Client Secret Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>