AmpShare SF Codebase/force-app/main/default/objects/Org_Details__c/fields/Domain_URL__c.field-meta.xml
<CustomField>
    <fullName>Domain_URL__c</fullName>
    <label>Domain URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>