AmpShare SF Codebase/force-app/main/default/objects/Org_Details__c/fields/SalesforceEndpoints__c.field-meta.xml
<CustomField>
    <fullName>SalesforceEndpoints__c</fullName>
    <label>SalesforceAgentforceEndpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>